--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "jspdf": "^4.0.0",
     "lucide-react": "^0.462.0",
@@ -57,6 +59,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.61.1",
+    "react-i18next": "^16.5.3",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
