--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,25 @@
 project_id = "hwqzkkldhmfcrsqalade"
+
+[functions.crawler-health]
+verify_jwt = false
+
+[functions.crawler-auth-start]
+verify_jwt = false
+
+[functions.crawler-auth-status]
+verify_jwt = false
+
+[functions.crawler-auth-cancel]
+verify_jwt = false
+
+[functions.crawler-auth-sessions]
+verify_jwt = false
+
+[functions.crawler-auth-revoke]
+verify_jwt = false
+
+[functions.crawler-auth-import-cookies]
+verify_jwt = false
+
+[functions.suggest-keywords]
+verify_jwt = false
