Configure environment file handling and update documentation
- Remove .env files from version control
- Add .env.example templates for reference
- Update .gitignore to exclude environment files
- Improve README with contribution guidelines

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,11 @@ __pycache__/
 *.py[cod]
 .venv/
 .tmp-ref/
+
+# Environment files
+.env
+.env.*
+!.env.example
+crawler-service/.env
+crawler-service/.env.*
+!crawler-service/.env.example
